rate limiting added and route for api key changed
